feat: add JWT refresh token
